2006-06-02  Hans Rakers <hans at parse dot nl>
	* Removed two unused vars from the internal datastructures
	* Fixed constructor inheritance. This fixes handling of implicit
	  constructors and solves ticket #89

2006-05-14  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Forgot to remove some debug messages for the filter bug.

2006-05-08  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Make the disassembler do openbasedir checks before showing a file, 
          this fixes bug #59
        * Changed the filter logic a bit, this fixes bug #72

2006-05-07  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Added directory hashing for md5 and inode based keys based on a patch
          from <mattias at efterfesten.com>, default is 2 levels deep.
        * Renamed some left over MM based names to EA.
        * Increased default hash size for user and script to 512 for extra 
          performance.

2006-05-04  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Don't store the doc_comments in op_array and class_entry. They are 
          useless. this should reduce memory footprint.
        * Included patch from Stadler from ticket #23. It adds a nice menu 
          and code highlighting.

2006-04-13  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * When content cache is used also compiled shared memory functions

2006-04-11  Hans Rakers <hans at parse dot nl>

        * Fix for 64-bit compilation warnings "cast to pointer from
          integer of different size"

2006-04-11  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * A lot of fixes to silence the compile warnings generated when compiling
          with the default Fedora compiler options
        * Removed FC compiled options from Makefile.in again, stupid me 

2006-04-11  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Silenced the unlock function for win32 until a windows developer can
          take a look at it.